--- a/Sass/Utils/_Animation.scss
+++ b/Sass/Utils/_Animation.scss
@@ -152,19 +152,19 @@
           animation-delay: 900ms;
 }
 .lds-spinner {
-  color: official;
   display: inline-block;
   position: relative;
-  width: 50px;
-  height: 50px;
+  width: 80px;
+  height: 80px;
+  
 }
 .lds-spinner div {
   transform-origin: 40px 40px;
   -webkit-animation: lds-spinner 1.2s linear infinite;
           animation: lds-spinner 1.2s linear infinite;
 }
-.lds-spinner div:after {
-  content: " ";
+.lds-spinner div::after {
+  content: "";
   display: block;
   position: absolute;
   top: 3px;
@@ -173,6 +173,7 @@
   height: 18px;
   border-radius: 20%;
   background: $primary_color;
+  
 }
 .lds-spinner div:nth-child(1) {
   transform: rotate(0deg);
