--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -366,9 +366,8 @@ body a {
   justify-content: center;
   align-items: center;
 }
-.header_logo_pict {
-  height: 2rem;
-  width: 11rem;
+.header_logo h1 {
+  font-family: shrikhand;
 }
 
 input {
@@ -503,7 +502,7 @@ input {
 .section_2_2_card_s_num {
   background-color: #9356dc;
   border-radius: 50%;
-  padding: 1.2% 2.8% 1.2% 2.8%;
+  padding: 0.2rem 0.4rem 0.2rem 0.4rem;
   color: white;
   font-size: small;
 }
@@ -752,9 +751,8 @@ footer a {
   display: flex;
   align-items: center;
 }
-.R1-header-b2-pict {
-  height: 1.7rem;
-  width: 9rem;
+.R1-header-b2 h1 {
+  font-family: shrikhand;
 }
 .R1-menu {
   width: 100%;
@@ -1143,6 +1141,10 @@ footer a {
     width: 100%;
   }
 
+  .header_logo h1 {
+    font-size: 2.5rem;
+  }
+
   .section_1 {
     width: 85%;
     box-shadow: #dddcdc 5px 5px 5px;
@@ -1257,9 +1259,8 @@ footer a {
   .header_logo {
     height: 100%;
   }
-  .header_logo_pict {
-    width: 100%;
-    height: 4rem;
+  .header_logo h1 {
+    font-size: 3.5rem;
   }
 
   .loader {
@@ -1290,6 +1291,9 @@ footer a {
   .section_1_2_button {
     margin-top: 1%;
   }
+  .section_1_2_button_b {
+    width: 40%;
+  }
   .section_1_2_title h2 {
     font-size: 200%;
   }
@@ -1318,7 +1322,7 @@ footer a {
   }
   .section_2_2_card_s_num {
     font-size: 150%;
-    padding: 1% 4% 1% 4%;
+    padding: 0.2rem 0.6rem 0.2rem 0.6rem;
   }
   .section_2_2_card_s_icon, .section_2_2_card_s_icon2 {
     font-size: 150%;
@@ -1428,16 +1432,13 @@ footer a {
     font-size: 160%;
   }
   .R1-menu-carte-choix-entrees-nom-x {
-    height: 20%;
+    height: 5rem;
   }
   .R1-menu-carte-choix-entrees-nom-x-price {
     display: flex;
     justify-content: center;
     align-content: flex-end;
     margin-right: 1%;
-  }
-  .R1-menu-carte-choix-entrees-nom-x-text {
-    margin-top: 1rem;
   }
   .R1-menu-carte-choix-entrees-nom-x-text-titre > h3 {
     font-size: 120%;
