--- a/Sass/Pages/_restaurant.scss
+++ b/Sass/Pages/_restaurant.scss
@@ -30,10 +30,11 @@
       width: 70%;
       display: flex;
       align-items: center;
-      &-pict {
-        height: 1.7rem;
-        width: 9rem;
-      }
+        & h1{
+          font-family: shrikhand;
+        }
+      
+  
     }
   }
   &-menu {
@@ -186,6 +187,7 @@
                 -webkit-animation-duration: 500ms;
                         animation-duration: 500ms;
               }
+            
               .checkrotate {
                 -webkit-animation: rotate 400ms;
                 animation: rotate;
