--- a/Sass/Responsive/_Tablet_MQ.scss
+++ b/Sass/Responsive/_Tablet_MQ.scss
@@ -4,6 +4,9 @@
   flex-wrap: wrap;
   width: 100%;
 }
+.header_logo h1{
+  font-size: 2.5rem;
+}
 .section_1 {
   width: 85%;
   box-shadow: rgb(221, 220, 220) 5px 5px 5px;
