--- a/Sass/Responsive/_desktop_MQ.scss
+++ b/Sass/Responsive/_desktop_MQ.scss
@@ -7,10 +7,10 @@
   width: 100%;
   &_logo {
     height: 100%;
-    &_pict {
-      width: 100%;
-      height: 4rem;
-    }
+      & h1{
+        font-size: 3.5rem;
+      }
+    
   }
 }
 .loader {
@@ -39,6 +39,9 @@
     border-bottom-right-radius: 40px;
     &_button{
       margin-top: 1%;
+        &_b{
+          width: 40%;
+        }
     }
     &_title h2 {
       font-size: 200%;
@@ -68,7 +71,7 @@
       }
       &_s_num {
         font-size: 150%;
-        padding: 1% 4% 1% 4%;
+        padding: 0.2rem 0.6rem 0.2rem 0.6rem;
       }
       &_s_icon,
       &_s_icon2 {
@@ -183,7 +186,7 @@
       font-size: 160%;
     }
     &-entrees-nom-x {
-      height: 20%;
+      height: 5rem;
       &-price {
         display: flex;
         justify-content: center;
@@ -191,7 +194,6 @@
         margin-right: 1%;
       }
       &-text{
-        margin-top: 1rem;
         &-titre >h3{
           font-size: 120%;
         }
