--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -22,8 +22,8 @@
   height: 100%;
   background-color: white;
   z-index: 10;
-  -webkit-animation: loader 4s forwards;
-  animation: loader 4s forwards;
+  -webkit-animation: loader 2s forwards;
+  animation: loader 2s forwards;
   width: 100%;
   height: 100%;
   display: flex;
@@ -952,6 +952,9 @@ footer a {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .R1-menu-carte-choix-entrees-nom-x-text-stitre {
   margin: 0;
